--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FraveOne</title>
+    <title>Frave: Take One</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,54 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-white bg-light">
+      <a class="navbar-brand ml-2" href="/posts">Frave</a>
+      <div class="nav navbar-nav ml-auto">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link pr-1" href="/posts">About</a>
+          </li>
+          <li class="nav-item pl-1 pr-2">
+            <a class="nav-link" href="/posts/new">Contact</a>
+          </li>
+          <li class="nav-item">
+            <% if current_user.present? %>
+              <li class="nav-item mt-2">
+                <span><%= current_user.first_name %></span>
+              </li>
+              <li class="nav-item">
+                <%= link_to(
+                  'Sign Out', 
+                  session_path, 
+                  method: :delete,
+                  class: "nav-link pr-1"
+                ) %>
+              </li>
+            <% else %>  
+              <li class="nav-item">
+                <%= link_to('Sign In', 
+                  new_session_path,
+                  class:"nav-link"
+                ) %>
+              </li>
+              <li class="nav-item">
+                <%= link_to('Sign Up', 
+                  new_user_path,
+                  class:"nav-link"
+                ) %>
+              </li>
+            <% end %> 
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <% flash.each do |type, message| %>
+        <div class="alert alert-<%=type%> alert-dismissible fade show">
+          <%= message %>
+        </div>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
