Add association for reward model to goal model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,14 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-light">
-      <a class="navbar-brand ml-3" href="/posts">Frave</a>
+      <a class="navbar-brand ml-3" href="/">Frave</a>
       <div class="nav navbar-nav ml-auto">
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link pr-1" href="/posts">About</a>
+            <a class="nav-link pr-1" href="/">About</a>
           </li>
           <li class="nav-item pl-1 pr-2">
-            <a class="nav-link" href="/posts/new">Contact</a>
+            <a class="nav-link" href="/">Contact</a>
           </li>
           <li class="nav-item">
             <% if current_user.present? %>
