--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,39 @@
 
 <div>
   <h5>This is the user dashboard</h5>
+  <%#= @user.id %><%#= @user.first_name %>
+</div>
+ 
+<div class="row">
+  <div class="col-lg-6 col-sm-12">
+    <div class="card">
+      <div class="card-body">
+        <p>Update Transactions Section</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-6 col-sm-12">
+    <div class="card">
+      <div class="card-body">
+        <p>Graph goes here</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-6 col-sm-12">
+    <div class="card">
+      <div class="card-body">
+        <p>Rewards Section</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-6 col-sm-12">
+    <div class="card">
+      <div class="card-body">
+        <p>Goal Setting Section</p>
+      </div>
+    </div>
+  </div>
 </div>
