--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,11 @@
 <div class="row">
   <div class="col-lg-6 col-sm-12">
     <div class="card">
+      <div class="card-body">
         <p>Update Transactions Section</p>
+        <!--Link to Goal index?-->
+        <!--Goal index shows list of links of  goals-->
+        <!--Indiv Goal will show list of transactions-->
       </div>
     </div>
   </div>
@@ -16,6 +20,7 @@
     <div class="card">
       <div class="card-body">
         <p>Graph goes here</p>
+        <!--Should be all transactions for all goals-->
       </div>
     </div>
   </div>
@@ -26,6 +31,7 @@
     <div class="card">
       <div class="card-body">
         <p>Rewards Section</p>
+        <!--Link to rewards index-->
       </div>
     </div>
   </div>
@@ -33,6 +39,9 @@
     <div class="card">
       <div class="card-body">
         <p>Goal Setting Section</p>
+        <!--Link to goal new-->
+        <!--Goal new.save renders indiv goal show -->
+        <!--Indiv goal shows list of transactions plus graph-->
       </div>
     </div>
   </div>
