--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,6 +32,8 @@
       <div class="card-body">
         <p>Rewards Section</p>
         <!--Link to rewards index-->
+        <!--Index links to reward show-->
+        <!--Show page shows reward level, link to edit, link to assoc. goal -->
       </div>
     </div>
   </div>
@@ -41,7 +43,8 @@
         <p>Goal Setting Section</p>
         <!--Link to goal new-->
         <!--Goal new.save renders indiv goal show -->
-        <!--Indiv goal shows list of transactions plus graph-->
+        <!--Indiv goal shows list of transactions plus graph for that specific goal-->
+        <!--Indiv goal has link to new reward if not created or reward page-->
       </div>
     </div>
   </div>
