--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,40 +1,19 @@
 <h1 class="ml-4">Sign Up</h1>
 <div class="container-fluid bg-white ml-2 mt-3">
-  <%= form_for @user do |f| %>
-    <% if @user.errors.any? %>
-      <p>
-        <%= @user.errors.full_messages.join(', ') %>
-      </p>
-    <% end %>
+  <%= simple_form_for @user do |f| %>
+   
+    <%= f.input :first_name %>
+    
+    <%= f.input :last_name %>
 
-    <div class="form-group mr-3">
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name, class: 'form-control' %>
-    </div>
+    <%= f.input :email %>
 
-    <div class="form-group mr-3">
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name, class: 'form-control' %>
-    </div>
+    <%= f.input :password %>
 
-    <div class="form-group mr-3">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control'%>
-    </div>
+    <%= f.input :password_confirmation %>
 
-    <div class="form-group mr-3">
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-    </div>
-
-    <div class="form-group mr-3">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit "Sign Up", class: 'btn btn-outline-primary' %>
-    </div>
+    <%= f.submit "Sign Up", class: "btn btn-outline-primary" %>
+    
   <% end %>
 </div>
 
