Implement authorization & new/edit goal pages

--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -11,4 +11,8 @@ TOTAL: $1000
 The total is what is stored in the DB and the "Calculate"
 button adds up the form and updates/post/patch the db
 -->
+<div class="container">
+  <h2>Set up a NEW Goal</h2>
+  <%= render "form" %>
+<div>
 
