--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,9 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-light">
-      <a class="navbar-brand ml-3" href="/">Frave</a>
+      <a class="navbar-brand ml-3" href="/dashboard">Frave</a>
       <div class="nav navbar-nav ml-auto">
         <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link pr-1" href="/">How it Works</a>
-          </li>
-          <li class="nav-item pl-1 pr-2">
-            <a class="nav-link" href="/">Set a Goal</a>
-          </li>
-          <li class="nav-item pl-1 pr-2">
-            <a class="nav-link" href="/">News</a>
-          </li>
           <li class="nav-item">
             <% if current_user.present? %>
               <li class="nav-item mt-2">
@@ -50,6 +41,15 @@
                 ) %>
               </li>
             <% end %> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pr-1" href="/">How it Works</a>
+          </li>
+          <li class="nav-item pl-1 pr-2">
+            <a class="nav-link" href="/goals/new">Set a Goal</a>
+          </li>
+          <li class="nav-item pl-1 pr-2">
+            <a class="nav-link" href="/">News</a>
           </li>
         </ul>
       </div>
