--- a/app/views/rewards/show.html.erb
+++ b/app/views/rewards/show.html.erb
@@ -1,1 +1,10 @@
 <h2>Rewards for <%= @goal.title %></h2>
+
+<div class="container">
+  <!-- how to render the form only if the form is not filled out yet?-->
+  <%= render 'form' %>
+</div>
+
+<div class="container reward-list">
+  <!-- render a partial list of the rewards-->
+</div>
