Revise routes and complete reward setup page

--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -19,11 +19,12 @@
       </p>
     <% end %>
   <% end %>
-  <!-- LINK to NEW reward if no reward - link to reward if Reward set up-->
   <% if @reward %>
-    <%= link_to 'Rewards', goal_reward_path(@goal, @reward) %>
+    <%#= link_to 'Rewards', goal_reward_path(@goal, @reward) %>
+    <%= link_to 'Rewards', reward_path(@reward) %>
   <% else %>
-    <%= link_to 'Set Up Reward', new_goal_reward_path(@goal) %>
+    <%#= link_to 'Set Up Reward', new_goal_reward_path(@goal) %>
+    <%#= link_to 'Set Up Reward', new_reward_path %>
   <% end %>
 </div>
 
@@ -31,7 +32,7 @@
 <div>
   <%#= line_chart @goal.transactions.group_by_month(:created_at).sum(:amount), prefix: "$", ytitle: "Amount" %>
   <% @sum = 0 %>
-  <%= line_chart @goal.transactions.group_by_month('transactions.created_at').sum(:amount).map { |x,y| { x => (@sum += y)} }.reduce({}, :merge) %>
+  <%= line_chart @goal.transactions.group_by_month('transactions.created_at').sum(:amount).map { |x,y| { x => (@sum += y)} }.reduce({}, :merge), prefix: "$" %>
 </div>
 
 <div class="container mt-5">
