--- a/app/views/rewards/new.html.erb
+++ b/app/views/rewards/new.html.erb
@@ -1,5 +1,7 @@
 <h2><%= @goal.title %></h2>
 
-<h3>Name your reward</h3>
+<h3>Your savings rewards</h3>
 
-<!--render form here too - and just redirect to the show page-->
+<!--render form here ONLY - and redirect to the show page-->
+<div class="container">
+</div>
