--- a/app/views/rewards/new.html.erb
+++ b/app/views/rewards/new.html.erb
@@ -1,7 +1,10 @@
-<h2><%= @goal.title %></h2>
+<h2><%#= @goal.title %></h2>
 
 <h3>Your savings rewards</h3>
 
 <!--render form here ONLY - and redirect to the show page-->
+
 <div class="container">
+  <%= render 'form' %>
 </div>
+
